使用 Colab 创建而成

--- a/_downloads/af0caf6d7af0dda755f4c9d7af9ccc2c/quickstart_tutorial.ipynb
+++ b/_downloads/af0caf6d7af0dda755f4c9d7af9ccc2c/quickstart_tutorial.ipynb
@@ -1,16 +1,6 @@
 {
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/freesky3/python-machine-learning/blob/main/_downloads/af0caf6d7af0dda755f4c9d7af9ccc2c/quickstart_tutorial.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -94,11 +84,11 @@
       "cell_type": "code",
       "execution_count": 2,
       "metadata": {
-        "id": "CiwKc73tFLOf",
-        "outputId": "e0cd8735-79ac-4151-e7a2-b034381cc8eb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "CiwKc73tFLOf",
+        "outputId": "e0cd8735-79ac-4151-e7a2-b034381cc8eb"
       },
       "outputs": [
         {
@@ -218,11 +208,11 @@
       "cell_type": "code",
       "execution_count": 3,
       "metadata": {
-        "id": "4oOGQQbKFLOh",
-        "outputId": "dc0a3235-2ee3-449e-c22e-04e7185e4476",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "4oOGQQbKFLOh",
+        "outputId": "dc0a3235-2ee3-449e-c22e-04e7185e4476"
       },
       "outputs": [
         {
@@ -287,11 +277,11 @@
       "cell_type": "code",
       "execution_count": 4,
       "metadata": {
-        "id": "kvU2drELFLOl",
-        "outputId": "d242ad45-5d4a-41ff-9178-da7f84e0a6c4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "kvU2drELFLOl",
+        "outputId": "d242ad45-5d4a-41ff-9178-da7f84e0a6c4"
       },
       "outputs": [
         {
@@ -432,18 +422,18 @@
     {
       "cell_type": "code",
       "source": [
-        "print(len(train_dataloader.dataset))\n",
+        "print(len(train_dataloader.dataset)) # 说明len(train_dataloader.dataset)是batch数 乘上 一个batch里的数据量\n",
         "for X, y in train_dataloader:\n",
-        "  print(len(X))\n",
+        "  print(len(X)) # 说明len(X)是 一个batch里的数据量\n",
         "  break\n",
-        "print(len(train_dataloader))"
+        "print(len(train_dataloader)) # 说明len(train_dataloader)是 batch数"
       ],
       "metadata": {
-        "id": "zhWnbYPJXrV8",
-        "outputId": "4bd7a96e-f1f6-482d-c10e-c0148005fd4a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "zhWnbYPJXrV8",
+        "outputId": "4bd7a96e-f1f6-482d-c10e-c0148005fd4a"
       },
       "execution_count": 13,
       "outputs": [
@@ -658,8 +648,7 @@
       "version": "3.10.12"
     },
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     }
   },
   "nbformat": 4,
