使用 Colab 创建而成

--- a/_downloads/af0caf6d7af0dda755f4c9d7af9ccc2c/quickstart_tutorial.ipynb
+++ b/_downloads/af0caf6d7af0dda755f4c9d7af9ccc2c/quickstart_tutorial.ipynb
@@ -497,11 +497,98 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
-        "id": "cPBqoZBbFLOp"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cPBqoZBbFLOp",
+        "outputId": "8c056d00-0479-4e70-efbf-5f895c743edd"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1\n",
+            "-------------------------------\n",
+            "loss: 2.312251  [   64/60000]\n",
+            "loss: 2.290652  [ 6464/60000]\n",
+            "loss: 2.269801  [12864/60000]\n",
+            "loss: 2.263487  [19264/60000]\n",
+            "loss: 2.243228  [25664/60000]\n",
+            "loss: 2.233318  [32064/60000]\n",
+            "loss: 2.235817  [38464/60000]\n",
+            "loss: 2.202089  [44864/60000]\n",
+            "loss: 2.194714  [51264/60000]\n",
+            "loss: 2.167842  [57664/60000]\n",
+            "Test Error: \n",
+            " Accuracy: 45.8%, Avg loss: 2.159074 \n",
+            "\n",
+            "Epoch 2\n",
+            "-------------------------------\n",
+            "loss: 2.174650  [   64/60000]\n",
+            "loss: 2.154137  [ 6464/60000]\n",
+            "loss: 2.092629  [12864/60000]\n",
+            "loss: 2.107758  [19264/60000]\n",
+            "loss: 2.058907  [25664/60000]\n",
+            "loss: 2.017622  [32064/60000]\n",
+            "loss: 2.036076  [38464/60000]\n",
+            "loss: 1.958240  [44864/60000]\n",
+            "loss: 1.950768  [51264/60000]\n",
+            "loss: 1.883337  [57664/60000]\n",
+            "Test Error: \n",
+            " Accuracy: 57.0%, Avg loss: 1.880188 \n",
+            "\n",
+            "Epoch 3\n",
+            "-------------------------------\n",
+            "loss: 1.919108  [   64/60000]\n",
+            "loss: 1.878724  [ 6464/60000]\n",
+            "loss: 1.755968  [12864/60000]\n",
+            "loss: 1.797021  [19264/60000]\n",
+            "loss: 1.695520  [25664/60000]\n",
+            "loss: 1.657306  [32064/60000]\n",
+            "loss: 1.671335  [38464/60000]\n",
+            "loss: 1.572674  [44864/60000]\n",
+            "loss: 1.586716  [51264/60000]\n",
+            "loss: 1.489057  [57664/60000]\n",
+            "Test Error: \n",
+            " Accuracy: 60.1%, Avg loss: 1.509609 \n",
+            "\n",
+            "Epoch 4\n",
+            "-------------------------------\n",
+            "loss: 1.579643  [   64/60000]\n",
+            "loss: 1.539897  [ 6464/60000]\n",
+            "loss: 1.389290  [12864/60000]\n",
+            "loss: 1.460767  [19264/60000]\n",
+            "loss: 1.351899  [25664/60000]\n",
+            "loss: 1.352483  [32064/60000]\n",
+            "loss: 1.360751  [38464/60000]\n",
+            "loss: 1.284539  [44864/60000]\n",
+            "loss: 1.315958  [51264/60000]\n",
+            "loss: 1.223970  [57664/60000]\n",
+            "Test Error: \n",
+            " Accuracy: 62.9%, Avg loss: 1.252018 \n",
+            "\n",
+            "Epoch 5\n",
+            "-------------------------------\n",
+            "loss: 1.333101  [   64/60000]\n",
+            "loss: 1.309990  [ 6464/60000]\n",
+            "loss: 1.144163  [12864/60000]\n",
+            "loss: 1.248447  [19264/60000]\n",
+            "loss: 1.130175  [25664/60000]\n",
+            "loss: 1.159730  [32064/60000]\n",
+            "loss: 1.175255  [38464/60000]\n",
+            "loss: 1.109288  [44864/60000]\n",
+            "loss: 1.149513  [51264/60000]\n",
+            "loss: 1.073724  [57664/60000]\n",
+            "Test Error: \n",
+            " Accuracy: 64.4%, Avg loss: 1.093367 \n",
+            "\n",
+            "Done!\n"
+          ]
+        }
+      ],
       "source": [
         "epochs = 5\n",
         "for t in range(epochs):\n",
@@ -544,11 +631,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
-        "id": "a8-Vp3DKFLOp"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "a8-Vp3DKFLOp",
+        "outputId": "8385bcce-6e9d-44b9-d3ef-9b207b2d141b"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Saved PyTorch Model State to model.pth\n"
+          ]
+        }
+      ],
       "source": [
         "torch.save(model.state_dict(), \"model.pth\")\n",
         "print(\"Saved PyTorch Model State to model.pth\")"
@@ -569,11 +668,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
-        "id": "lGtKv788FLOq"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lGtKv788FLOq",
+        "outputId": "eec69b26-77bb-41d1-c184-043d1e649354"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<All keys matched successfully>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ],
       "source": [
         "model = NeuralNetwork().to(device)\n",
         "model.load_state_dict(torch.load(\"model.pth\", weights_only=True))"
@@ -590,11 +704,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
-        "id": "D9mWOme4FLOq"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "D9mWOme4FLOq",
+        "outputId": "e5f3cbbe-454f-4dac-8e38-2d2a79b4b04f"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Predicted: \"Ankle boot\", Actual: \"Ankle boot\"\n",
+            "Predicted: \"Pullover\", Actual: \"Pullover\"\n",
+            "Predicted: \"Trouser\", Actual: \"Trouser\"\n",
+            "Predicted: \"Trouser\", Actual: \"Trouser\"\n",
+            "Predicted: \"Pullover\", Actual: \"Shirt\"\n",
+            "Predicted: \"Trouser\", Actual: \"Trouser\"\n",
+            "Predicted: \"Coat\", Actual: \"Coat\"\n",
+            "Predicted: \"Coat\", Actual: \"Shirt\"\n",
+            "Predicted: \"Sneaker\", Actual: \"Sandal\"\n",
+            "Predicted: \"Sneaker\", Actual: \"Sneaker\"\n"
+          ]
+        }
+      ],
       "source": [
         "classes = [\n",
         "    \"T-shirt/top\",\n",
@@ -610,12 +745,13 @@
         "]\n",
         "\n",
         "model.eval()\n",
-        "x, y = test_data[0][0], test_data[0][1]\n",
-        "with torch.no_grad():\n",
-        "    x = x.to(device)\n",
-        "    pred = model(x)\n",
-        "    predicted, actual = classes[pred[0].argmax(0)], classes[y]\n",
-        "    print(f'Predicted: \"{predicted}\", Actual: \"{actual}\"')"
+        "for i in range(10):\n",
+        "  x, y = test_data[i][0], test_data[i][1]\n",
+        "  with torch.no_grad():\n",
+        "      x = x.to(device)\n",
+        "      pred = model(x)\n",
+        "      predicted, actual = classes[pred[0].argmax(0)], classes[y]\n",
+        "      print(f'Predicted: \"{predicted}\", Actual: \"{actual}\"')"
       ]
     },
     {
